--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,9 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 34
+
+    namespace 'com.swimmingkiim.gify'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -41,6 +43,6 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 30
     }
 }
